--- a/myproject/myapp/static/css/styles.css
+++ b/myproject/myapp/static/css/styles.css
@@ -4,15 +4,12 @@
     margin: 0px;
 }
 
-#modal{
-    width: 100%;
-    position: fixed;
-}
+
 #header{
     background-color: rgb(67, 127, 205);
     color: white;
     padding: 10px;
-    z-index: 20;
+    z-index: 30;
     display: flex;
     justify-content: space-between;
 }
@@ -40,7 +37,7 @@
     margin-top: 15px;
 }
 .banner{
-    height: 300px;
+    height: 200px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -60,6 +57,9 @@
     cursor: pointer;
     font-size: 25px;
     margin-top: 15px;
+}
+.banner-bt:hover{
+    color: black;
 }
 
 .features, .statistics, .testimonials, .contact {
@@ -84,4 +84,67 @@ footer {
     padding: 15px;
     margin-top: px;
 
+}
+.hidden {
+    display: none;
+}
+#loginForm {
+    display: none;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 24;
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    justify-content: center;
+    align-items: center;
+}
+
+#loginForm div {
+    background: white;
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+}
+#loginForm h2{
+    border-bottom: rgb(117, 184, 239) 3px solid;
+    border-radius: 3px;
+    width: fit-content;
+    margin-bottom: 10px;
+}
+/* #loginForm-info{
+    display: flex;
+    flex-direction: column;
+} */
+#login{
+    position: relative;
+}
+.close{
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    font-size: 37px;
+    transform: rotate(45deg);
+    background-color: transparent;
+    outline: none;
+    cursor: pointer;
+    border: none;
+}
+#login input{
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    width: 100%;
+}
+.btn-login{
+    background-color: rgb(67, 127, 205);
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 10px;
 }
