--- a/myproject/myapp/static/css/styles.css
+++ b/myproject/myapp/static/css/styles.css
@@ -1,97 +1,127 @@
-*{
+* {
     box-sizing: border-box;
-    padding: 0px;
-    margin: 0px;
+    padding: 0;
+    margin: 0;
+    font-family: Arial, sans-serif;
 }
 
+body {
+    background-color: #f4f4f4;
+    text-align: center;
+}
 
-#header{
-    background-color: rgb(67, 127, 205);
+#header {
+    background-color: #437fcd;
     color: white;
-    padding: 10px;
-    z-index: 30;
+    padding: 15px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
-#header h2{
-    text-align:left;
-    margin-bottom: 20px;
-    font-size: 30px;
-    margin-top: 10px;
+#header h2 {
+    font-size: 25px;
 }
-#header  ul li a{
-    color: white;
-    text-decoration: none;
-    margin-right: 20px;
 
-}
-#header ul{
+#header ul {
     list-style: none;
 }
 
-#header ul li{
-    display: inline-block;
-    margin: 3px;
-    font-size: 20px;
-    cursor: pointer;
-    margin-top: 15px;
+#header ul li {
+    display: inline;
+    margin: 0 10px;
 }
-.banner{
-    height: 200px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: black;
-    z-index: 21;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+#header ul li a {
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
 }
-.banner h2{
-    margin-top: 10px;
+
+.banner {
+    padding: 50px;
+    background: white;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    margin: 20px auto;
+    width: 50%;
 }
-.banner-btn{
-    background-color: rgb(67, 127, 205);
+
+.banner-btn {
+    background-color: #3b72ba;
     color: white;
     padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
-    font-size: 25px;
+    font-size: 18px;
     margin-top: 15px;
 }
-.banner-bt:hover{
-    color: black;
+.banner-btn:hover {
+    background-color: #2c5fa3;
 }
 
-.features, .statistics, .testimonials, .contact {
-    padding: 40px ;
+#uploadSection {
+    display: none;
+    margin-top: 20px;
 }
+
+.file-input {
+    padding: 8px;
+    margin-top: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.upload-btn {
+    background: #008CBA;
+    color: white;
+    padding: 8px 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.upload-btn:hover {
+    background: #007bb5;
+}
+
+.features, .statistics, .contact {
+    padding: 40px;
+    background: white;
+    border-radius: 10px;
+    margin: 20px auto;
+    width: 70%;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+}
+
 .feature-item, .stat-item {
-    background-color: white;
-    padding: 20px;
+    background-color: #eef3f7;
+    padding: 15px;
     margin: 10px;
     border-radius: 5px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    font-size: 18px;
+    font-weight: bold;
 }
-.contact{
-    border: 2px ;
-    background-color: #537aa1;
-    color: white;
 
+.contact {
+    background: #537aa1;
+    color: white;
 }
+
+.contact p {
+    font-size: 18px;
+}
+
+.contact i {
+    margin-right: 8px;
+}
+
 footer {
     background-color: #2c3e50;
     color: white;
     padding: 15px;
-    margin-top: px;
-
-}
-.hidden {
-    display: none;
 }
 #loginForm {
     display: none;
     background-color: rgba(0, 0, 0, 0.7);
-    z-index: 24;
+    z-index: 10;
     width: 100%;
     height: 100vh;
     position: fixed;
@@ -103,48 +133,37 @@ footer {
 
 #loginForm div {
     background: white;
-    padding: 15px;
+    padding: 20px;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
     width: 300px;
     display: flex;
     flex-direction: column;
 }
-#loginForm h2{
-    border-bottom: rgb(117, 184, 239) 3px solid;
-    border-radius: 3px;
-    width: fit-content;
-    margin-bottom: 10px;
+
+#login h2 {
+    margin-bottom: 15px;
 }
-/* #loginForm-info{
-    display: flex;
-    flex-direction: column;
-} */
-#login{
-    position: relative;
-}
-.close{
-    position: absolute;
-    top: 10px;
-    right: 20px;
-    font-size: 37px;
-    transform: rotate(45deg);
-    background-color: transparent;
-    outline: none;
-    cursor: pointer;
-    border: none;
-}
-#login input{
+#login input {
     padding: 10px;
     margin-bottom: 10px;
     border-radius: 5px;
     width: 100%;
 }
-.btn-login{
-    background-color: rgb(67, 127, 205);
+
+.btn-login {
+    background-color: #437fcd;
     color: white;
-    padding: 10px 20px;
+    padding: 10px;
     border-radius: 5px;
     cursor: pointer;
-    margin-top: 10px;
+}
+.close {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    font-size: 24px;
+    background: none;
+    border: none;
+    cursor: pointer;
 }
