--- a/myproject/myapp/static/css/styles.css
+++ b/myproject/myapp/static/css/styles.css
@@ -135,6 +135,7 @@ footer {
     background: white;
     padding: 20px;
     border-radius: 10px;
+    position: relative;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
     width: 300px;
     display: flex;
@@ -166,4 +167,5 @@ footer {
     background: none;
     border: none;
     cursor: pointer;
+    transform: rotate(45deg);
 }
