--- a/myproject/myapp/templates/index.html
+++ b/myproject/myapp/templates/index.html
@@ -25,6 +25,7 @@
         <h2 class="section-title">Bảng điều khiển của giáo viên</h2>
         <ul class="info-list">
             <li><button>Quản lý đề thi</button></li>
+            <li><button>Quản lý câu hỏi</button></li>
             <li><button>Xem kết quả học sinh</button></li>
             <li><button>Xuất báo cáo</button></li>
         </ul>
