--- a/myproject/myapp/templates/taodethi.html
+++ b/myproject/myapp/templates/taodethi.html
@@ -1,13 +1,11 @@
-<!-- templates/tao_de_thi.html -->
 <h2>Tạo đề thi mới</h2>
-
-{% if error %}
-  <p style="color:red">{{ error }}</p>
-{% endif %}
-
 <form method="post">
     {% csrf_token %}
-    <label>Tên đề thi:</label>
-    <input type="text" name="ten_de" required>
-    <button type="submit">Tạo đề thi với 50 câu</button>
+    <label for="ma_de">Mã đề:</label>
+    <input type="text" name="ma_de" required><br><br>
+
+    <label for="ten_de">Tên đề:</label>
+    <input type="text" name="ten_de" required><br><br>
+
+    <button type="submit">Tạo đề thi</button>
 </form>
