--- a/myproject/myapp/templates/index.html
+++ b/myproject/myapp/templates/index.html
@@ -19,7 +19,8 @@
             <li><a href="#">Hướng dẫn</a></li>
           </ul>        
     </header>
-          
+    <button id="darkModeToggle" title="Chuyển chế độ">🌞</button>
+      
 
     <section id="teacherSection">
         <h2 class="section-title">Bảng điều khiển của giáo viên</h2>
