--- a/myproject/myapp/static/css/styles.css
+++ b/myproject/myapp/static/css/styles.css
@@ -173,6 +173,15 @@ footer {
 #login h2 {
     margin-bottom: 15px;
 }
+/* #logoutItem {
+    font-weight: bold;
+    font-size: 16px; 
+    color: white;
+    text-decoration: none;
+    margin-right: 10px;
+    cursor: pointer;
+} */
+
 
 #login input {
     padding: 10px;
@@ -201,7 +210,7 @@ footer {
 }
 
 #teacherSection, #studentSection {
-    display: none;
+    /* display: none; */
     background: white;
     padding: 20px;
     border-radius: 10px;
@@ -209,9 +218,9 @@ footer {
     width: 70%;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
-#teacherSection, #studentSection {
+/* #teacherSection, #studentSection {
     display: none;
-}
+} */
 .hidden{
     display: none;
 }
