xem danh sách đề thi

--- a/myproject/myapp/templates/index.html
+++ b/myproject/myapp/templates/index.html
@@ -30,7 +30,7 @@
         <section id="teacherSection" >
             <h2>PHẦN ĐIỀU KHIỂN CỦA GIÁO VIÊN</h2>
             <ul>
-                <li><a href="{% url 'tao_de_thi' %}"><button>Quản lý đề thi</button></a></li>
+                <li><a href="{% url 'danh_sach_de_thi' %}"><button>Quản lý đề thi</button></a></li>
                 <li><a href="{% url 'cau_hoi_list' %}"><button>Quản lý câu hỏi</button></a></li>
                 <li><a href="{% url 'upload_exam' %}"><button>Xem kết quả học sinh</button></a></li>
                 <li><a href="#"><button>Xuất báo cáo</button></a></li>
